added support for externalIP on grid instances, bumped version to 0.1.1
